--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Astrid Morkot
 description: Art and Other Things
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://raw.githubusercontent.com/astridmorkot/astridmorkot.github.io/master/images/jekyll-logo.png
 
 #
 # Flags below are optional
