--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Astrid Morkot
+name: <span style="font-family:Papyrus; font-size:4em;">Astrid Morkot</span>
 
 # Short bio or description (displayed in the header)
 description: Art and Other Things
