--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Astrid Morkot
 
 # Short bio or description (displayed in the header)
-description: <span style="color:red">ART AND OTHER THINGS</span>.
+description: ART AND OTHER THINGS
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/astridmorkot/astridmorkot.github.io/master/images/2a87ec9ccba4f9c4027733eb0ecded35.jpg
