--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Astrid Morkot
+name: __Astrid Morkot__
 
 # Short bio or description (displayed in the header)
 description: ART AND OTHER THINGS
